--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>Projects</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Start Bootstrap</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Giuseppe Pirillo</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
@@ -47,22 +47,61 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 1</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">Project40</h2>
+                                            <p>Project40 was started in 2022 by me and a friend of mine to design and build RoboButts, a robot with the purpose of collecting cigarette butts. The project was presented at the Maker Faire Trieste 2022 and won the jury's 1st special mention prize.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <a href="https://www.youtube.com/watch?v=xSQnI-e6mmg">
+                                        <img class="img-fluid" src="assets/1693925988580.jpeg"   alt="..." />
+                                        </a>
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 2-->
+                             <!-- Project Card 2-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">Ars Praesidum</h2>
+                                            <p>ArsPraesidium is a robot with the goal of defending paintings. The robot has a camera and various sensors that deploys a physical deployment protection system driven by 2 servo motors in the event of an intrusion near the painting or the throwing of objects. The robot was presented at the national stages of the Italian Robotics Championships 2023</p>
+                                        </div>
+                                        <img class="img-fluid" src="assets/ars.jpeg" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                             <!-- Project Card 3-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">
+                                                Physics with Arduino</h2>
+                                            <p>The project has the goal to explain some physics concepts using Arduino and some electronics. This project was presented at Arduino Week 2022, Naples Linux Day 2022 and NALUG Open Hardware Day 2023</p>
+                                        </div>
+                                        <img  src="assets/fisica.jpeg"  height ="291" width="507"alt="..." />                                  
+                                    </div>
+                                </div>
+                            </div>
+                             <!-- Project Card 4-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">Memoriometro</h2>
+                                            <p>A game in which you have to memorize the sequence of LEDs that light up by resuming them in the correct order. The project togheter with the "Riflessometro" had to purpose to introduce the new possible students of the school to electronics using some games made with Arduino</p>
+                                        </div>
+                                        <img class="img-fluid" src="assets/IMG_3478.JPG"  height ="300" width="400" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 5-->
                             <div class="card overflow-hidden shadow rounded-4 border-0">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 2</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">Riflessometro</h2>
+                                            <p>A game in which you have to test your reflexes by pressing the light button that lights up in the shortest possible time</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/riflessi.jpeg"  height ="300" width="400"alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -70,6 +109,7 @@
                     </div>
                 </div>
             </section>
+            
             <!-- Call to action section-->
             <section class="py-5 bg-gradient-primary-to-secondary text-white">
                 <div class="container px-5 my-5">
@@ -84,14 +124,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
-                    <div class="col-auto">
-                        <a class="small" href="#!">Privacy</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a>
-                    </div>
+                    <div class="col-auto"><div class="small m-0">Copyright (c) 2013-2023 Start Bootstrap LLC</div></div>
                 </div>
             </div>
         </footer>
